codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__footer_state__tests__find_hides_prompt_suggestion.snap
---
source: tui/src/bottom_pane/chat_composer/footer_state_tests.rs
assertion_line: 136
expression: text(&during_search.0)
---

› Ask Codex

  Find: needle
  Enter next · Esc close
