codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__footer_state__tests__find_hides_retained_command_suggestions.snap
---
source: tui/src/bottom_pane/chat_composer/footer_state_tests.rs
assertion_line: 231
expression: "frames.join(\"\\n\\n\")"
---
60x8, cursor Some((10, 6))

› /




  Find: needle
  Enter next · Esc close

24x8, cursor Some((10, 6))

› /




  Find: needle
  Enter next · Esc close

12x3, cursor None

› /
