codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__footer_state__tests__transcript_find_copy_footer.snap
---
source: tui/src/bottom_pane/chat_composer/footer_state_tests.rs
expression: text(&buffer)
---

› Ask Codex

  Find: needle
  Copied selection to clipboard
